src/pages/contacts/ContactsPage.module.scss
/* ... */
.selected {
  display: block;
}

.reminderAdd {
  cursor: pointer;
}

.primaryContact {
  a {
    text-decoration: none;
    color: var(--v2-royal-blue);
    font-weight: bold;
    cursor: pointer;
  }
}

.tagBadge {
  border: 1px solid #717171;
  border-radius: 4px;
  color: #434A51;
  display: inline-flex;
  margin: 2px;
  padding: 2px;
  font-size: 12px;
  min-height: 20px;
  align-items: center;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: -0.09px;
  white-space: nowrap;
}

.tagBadgeDot {
  display: flex;
  justify-content: center;
  vertical-align: middle;
  color: #969696;
  border: 1px solid #717171;
  border-radius: 4px;
  color: #434A51;
  margin: 2px;
  font-size: 24px;
  min-height: 20px;
  max-width: 39px;
  align-items: center;
  padding-bottom: 2px;
}

.footerContainer {
  display: flex;
  justify-content: center;

  .footerBanners {
    width: 57%;
    margin: auto;
  }
}

.tagsModal {
  background: #f4f8fb;
  padding: 20px;
  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
  width: 380px;

  .tagsModalHeader {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .tagHeader {
      font-size: 24px;
      line-height: 48px;
      color: var(--v2-dark-blue);
      font-family: "Lato", sans-serif;
      font-weight: 400;
      margin-bottom: 6px;
    }

    .tagCount {
      font-size: 16px;
    }
  }

  .categoryName {
    font-weight: bold;
    padding: 10px 0;
    color: black;
  }

  .tagItemsList {
    background-color: white;
    padding: 10px;

    .selectedTagCheck>i {
      color: blue;
    }
  }

  .tagRow {
    display: flex;
    justify-content: space-between;
    padding: 5px 0;
    align-items: center;
    background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
    box-shadow: inset 0px -1px 0px var(--unnamed-color-cdd0d5);
    background: #FFFFFF 0% 0% no-repeat padding-box;
    box-shadow: inset 0px -1px 0px #CDD0D5;
    border-radius: 8px 8px 0px 0px;
    opacity: 1;
    min-width: 152px;
    padding-right: 10px;
    cursor: pointer;

    .tagRowText {
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    .tagNameSpan {
      font-size: 15px;
      letter-spacing: 0.16px;
      color: #434A51;
      opacity: 1;
    }

    .tagIcon>svg {
      margin-left: 3px;
      vertical-align: middle;
    }

    .rowHoverWrapper {
      .editIcon {
        display: none;
      }

      &:hover {
        .tagIcon {
          display: none;
        }

        .editIcon {
          display: unset;
        }
      }
    }
  }

  .tagFooter {
    display: flex;
    justify-content: space-between;
    padding: 10px;
    margin-top: 10px;

    >Button {
      width: 80px;
      padding: 5px;
      font-weight: bold;
    }
  }
}

.categoryContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.expandIcons {
  color: #0052ce;
  width: 12px;
  height: 8px;
  cursor: pointer;
}

.tagCategoryId {
  display: grid;
  grid-template-columns: auto auto;
  grid-column-gap: 18px;
  grid-row-gap: 2px;
  padding: 16px 16px 0px 16px;
}

.createTagContainer {
  display: flex;
  align-items: center;
  background: #FFFFFF 0% 0% no-repeat padding-box;
  box-shadow: inset 0px -1px 0px #cdd0d5;
  border-radius: 8px 8px 0px 0px;
  opacity: 1;
  min-width: 152px;
  min-height: 40px;
  margin-left: 16px;
  margin-top: 2px;

  .createTag {
    letter-spacing: 0.16px;
    color: #0052CE;
    opacity: 1;
    font-size: 15px;
  }
}

.createInputTagContainer {
  display: flex;
  margin: 10px 0px;
  justify-content: space-between;
  align-items: center;
}

.createInpt {
  width: 111px;
  height: 38px;
  background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
  background: #FFFFFF 0% 0% no-repeat padding-box;
  border: 1px solid #C7CCD1;
  border-radius: 4px;
  opacity: 1;
}

.editExistingTagContainer {
  display: flex;
  justify-content: space-between;
}

.editActionContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.mobileHidden {
  @media (max-width: 480px) {
    display: none;
  }
}

